<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.semblanceoffunctionality.eventbuddy.ui.event.EventDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_name"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.name}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Event Name"
            />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toEndOf="@id/event_name"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/delete_description"
            android:src="@drawable/ic_delete"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_start"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.dateStart}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:text="Jan 01, 2023"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_end"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.dateEnd}"
            android:gravity="center"
            app:layout_constraintStart_toEndOf="@+id/event_start"
            app:layout_constraintTop_toBottomOf="@+id/event_name"
            tools:text="- Dec 30, 2023"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/event_registered"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:checked="@{viewModel.event.registered}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_start"
            android:text="@string/event_registered"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/event_paid"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:checked="@{viewModel.event.paid}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_end"
            android:text="@string/event_paid"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_website"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.website}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_registered"
            tools:text="Website Here"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_facebook"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.facebook}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_website"
            tools:text="Facebook Here"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_scoring"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.scoring}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_facebook"
            tools:text="Scoring Here"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_venue"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.event.venue}"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_scoring"
            tools:text="Venue Here"
            />

        <TextView
            android:id="@+id/event_hotel_label"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/event_travel_label"
            app:layout_constraintTop_toBottomOf="@+id/event_travel_info"
            android:text="@string/hotel_info"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/event_hotel_booked"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:checked="@{viewModel.event.hotelBooked}"
            app:layout_constraintStart_toStartOf="@+id/event_hotel_label"
            app:layout_constraintTop_toBottomOf="@+id/event_hotel_label"
            android:text="@string/hotel_booked"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_hotel_info"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/event_travel_label"
            app:layout_constraintTop_toBottomOf="@+id/event_hotel_booked"
            android:text="@{viewModel.event.hotelInfo}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_roomies"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/event_hotel_label"
            app:layout_constraintTop_toBottomOf="@+id/event_hotel_info"
            android:text="@{viewModel.event.roomies}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_hotel_price"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/event_hotel_label"
            app:layout_constraintTop_toBottomOf="@+id/event_roomies"
            android:text="@{viewModel.event.price}"
            />

        <TextView
            android:id="@+id/event_travel_label"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/event_paid"
            android:text="@string/travel_info"
            />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/travel_booked"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/event_travel_label"
            app:layout_constraintTop_toBottomOf="@+id/event_travel_label"
            android:text="@string/travel_booked"
            android:checked="@{viewModel.event.travelBooked}"
            />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/event_travel_info"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@+id/event_travel_label"
            app:layout_constraintTop_toBottomOf="@+id/travel_booked"
            android:text="@{viewModel.event.travelInfo}"
            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_save"
            android:contentDescription="@string/save_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>